--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,8 +15,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="That's funny... nothing came up"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:text="@string/no_items_in_list_error"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:visibility="invisible" />
 
     <ProgressBar
         android:layout_width="wrap_content"
