--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"/>
+        android:id="@+id/listView"
+        android:dividerHeight="8dp" />
 
     <TextView
         android:id="@+id/error_text_view"
